--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "license": "ISC",
   "dependencies": {
     "@ansik/sdk": "latest",
+    "@types/uuid": "^3.4.5",
     "bluebird": "latest",
-    "smartcar": "^7.2.0"
+    "smartcar": "^7.2.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/bluebird": "latest",
