--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "start": "node dist/index.js",
     "clean": "rimraf dist coverage",
     "build": "tsc --build tsconfig.build.json",
-    "test:before": "sh test/setup.sh",
-    "test:after": "sh test/tearDown.sh",
-    "test:runner": "TEST_CONF_PATH=e2e-conf.json ./node_modules/.bin/jest --runInBand",
-    "test:runner:unit": "TEST_CONF_PATH=e2e-conf.json ./node_modules/.bin/jest --config=./jest.config.unit.js",
-    "test:runner:e2e": "TEST_CONF_PATH=e2e-conf.json ./node_modules/.bin/jest --config=./jest.config.e2e.js --detectOpenHandles --runInBand",
+    "test:before": "sh test/setupOnce.sh",
+    "test:after": "sh test/tearDownOnce.sh",
+    "test:runner": "CONF_PATH=conf-e2e.json ./node_modules/.bin/jest --runInBand",
+    "test:runner:unit": "CONF_PATH=conf-e2e.json ./node_modules/.bin/jest --config=./jest.config.unit.js",
+    "test:runner:e2e": "CONF_PATH=conf-e2e.json ./node_modules/.bin/jest --config=./jest.config.e2e.js --detectOpenHandles --runInBand",
     "test": "npm run test:before && npm run test:runner && npm run test:after",
     "test:unit": "npm run test:before && npm run test:runner:unit && npm run test:after",
     "test:e2e": "npm run test:before && npm run test:runner:e2e && npm run test:after",
@@ -24,21 +24,30 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ansik/sdk": "0.0.32",
-    "bluebird": "latest",
-    "smartcar": "^7.2.0",
-    "uuid": "^3.3.3"
+    "@ansik/sdk": "^0.1.1",
+    "axios": "^0.19.2",
+    "bluebird": "^3.7.2",
+    "io-ts": "^1.10.4",
+    "io-ts-types": "^0.5.5",
+    "knex": "^0.20.8",
+    "lodash": "^4.17.15",
+    "smartcar": "^7.4.1",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@types/bluebird": "latest",
     "@types/bluebird-global": "latest",
-    "@types/jest": "latest",
-    "@types/node": "latest",
-    "@types/uuid": "^3.4.5",
-    "jest": "latest",
-    "jest-environment-node": "latest",
-    "rimraf": "latest",
+    "@types/jest": "^25.1.0",
+    "@types/lodash": "latest",
+    "@types/node": "^13.5.1",
+    "@types/uuid": "^3.4.7",
+    "jest": "^25.1.0",
+    "jest-circus": "^25.1.0",
+    "jest-environment-node": "^25.1.0",
+    "nock": "latest",
+    "rimraf": "^3.0.1",
     "ts-jest": "latest",
-    "typescript": "latest"
+    "typescript": "latest",
+    "utility-types": "latest"
   }
 }
