--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "starter-code",
-  "version": "0.0.1",
+  "name": "@ansik/smartcar-integration",
+  "version": "0.1.0",
   "description": "",
   "repository": "",
   "main": "dist/index.js",
@@ -17,9 +17,10 @@
     "test": "npm run test:before && npm run test:runner && npm run test:after",
     "test:unit": "npm run test:before && npm run test:runner:unit && npm run test:after",
     "test:e2e": "npm run test:before && npm run test:runner:e2e && npm run test:after",
-    "test:cov": "npm run test:before && npm run test:runner -- --coverage && npm run test:after",
+    "test:cov": "npm run test:before && npm run test:runner:unit -- --coverage && npm run test:after",
     "see-cov": "open coverage/lcov-report/index.html",
-    "prepublishOnly": "npm test && npm run clean && npm run build"
+    "publish:before": "npm run clean && npm run test:unit && npm run build",
+    "do-publish": "npm run publish:before && bash publish.sh"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "@ansik/sdk": "^0.1.1",
     "axios": "^0.19.2",
     "bluebird": "^3.7.2",
+    "debug": "^4.1.1",
     "io-ts": "^1.10.4",
     "io-ts-types": "^0.5.5",
     "knex": "^0.20.8",
@@ -37,15 +39,17 @@
   "devDependencies": {
     "@types/bluebird": "latest",
     "@types/bluebird-global": "latest",
-    "@types/jest": "^25.1.0",
+    "@types/debug": "latest",
+    "@types/jest": "latest",
+    "@types/knex": "latest",
     "@types/lodash": "latest",
-    "@types/node": "^13.5.1",
-    "@types/uuid": "^3.4.7",
-    "jest": "^25.1.0",
-    "jest-circus": "^25.1.0",
-    "jest-environment-node": "^25.1.0",
+    "@types/node": "latest",
+    "@types/uuid": "latest",
+    "jest": "latest",
+    "jest-circus": "latest",
+    "jest-environment-node": "latest",
     "nock": "latest",
-    "rimraf": "^3.0.1",
+    "rimraf": "latest",
     "ts-jest": "latest",
     "typescript": "latest",
     "utility-types": "latest"
